--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,31 +8,72 @@ html {
   flex-direction: column;
 }
 
-#non-mobile-message {
-  display: none;
+#landing-page {
   text-align: center;
-  margin-top: 50px;
-  font-size: 20px;
-  color: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #f8f9fa;
+}
+
+#landing-page h1 {
+  font-size: 6rem;
+  margin-bottom: 20px;
+  color: transparent;
+  -webkit-text-stroke: 0.5px black;
+  text-decoration: line-through;
+}
+
+#landing-page h2 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+#landing-page p {
+  font-size: 1.25rem;
+  margin-bottom: 5px;
+  color: transparent;
+  -webkit-text-stroke: 0.3px black;
+}
+
+#landing-page ul {
+  font-size: 1.25rem;
+  margin-bottom: 20px;
+  color: transparent;
+  -webkit-text-stroke: 0.5px black;
+}
+
+#landing-page li {
+  margin-bottom: 10px;
+}
+
+#landing-page button {
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  background-color: red;
+  border-color: red;
 }
 
 #message-container {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 #message {
-  font-size: 24px;
+  font-size: 32px;
   color: transparent;
-  -webkit-text-stroke: 1px black;
+  -webkit-text-stroke: 0.5px black;
 }
 
 #upload-button {
   display: none;
-  margin-top: 20px;
+  margin-top: 36px;
   background-color: red;
   border-color: red;
 }
@@ -47,6 +88,20 @@ html {
   font-size: 16px;
   margin-top: 10px;
   text-align: center;
+  position: fixed;
+  bottom: 0;
+}
+#distance {
+  font-size: 16px;
+  margin-top: 10px;
+  text-align: center;
+}
+#taipei-time {
+  font-size: 16px;
+  margin-top: 10px;
+  text-align: center;
+  position: fixed;
+  top: 0;
 }
 
 video {
@@ -70,8 +125,33 @@ video {
 
 /* Responsive Styles */
 @media (max-width: 576px) {
+  #landing-page h1 {
+    font-size: 2.25rem;
+  }
+
+  #landing-page h2 {
+    font-size: 1.35rem;
+  }
+
+  #landing-page p {
+    font-size: 0.875rem;
+  }
+
+  #lainding-page ul {
+    font-size: 0.875rem;
+  }
+
+  #landing-page li {
+    margin-bottom: 5px;
+  }
+
+  #landing-page button {
+    font-size: 1rem;
+    padding: 8px 16px;
+  }
+
   #message {
-    font-size: 20px;
+    font-size: 8vw;
   }
 
   #coordinates {
@@ -79,13 +159,38 @@ video {
   }
 
   video {
-    width: 70%;
+    width: 80%;
   }
 }
 
 @media (min-width: 577px) and (max-width: 768px) {
+  #landing-page h1 {
+    font-size: 2.25rem;
+  }
+
+  #landing-page h2 {
+    font-size: 1.35rem;
+  }
+
+  #landing-page p {
+    font-size: 0.875rem;
+  }
+
+  #lainding-page ul {
+    font-size: 0.875rem;
+  }
+
+  #landing-page li {
+    margin-bottom: 5px;
+  }
+
+  #landing-page button {
+    font-size: 1.25rem;
+    padding: 9px 18px;
+  }
+
   #message {
-    font-size: 22px;
+    font-size: 8vw;
   }
 
   #coordinates {
@@ -98,8 +203,33 @@ video {
 }
 
 @media (min-width: 769px) and (max-width: 992px) {
+  #landing-page h1 {
+    font-size: 2.25rem;
+  }
+
+  #landing-page h2 {
+    font-size: 1.35rem;
+  }
+
+  #landing-page p {
+    font-size: 0.875rem;
+  }
+
+  #lainding-page ul {
+    font-size: 0.875rem;
+  }
+
+  #landing-page li {
+    margin-bottom: 5px;
+  }
+
+  #landing-page button {
+    font-size: 1.375rem;
+    padding: 10px 20px;
+  }
+
   #message {
-    font-size: 24px;
+    font-size: 8vw;
   }
 
   #coordinates {
@@ -112,8 +242,33 @@ video {
 }
 
 @media (min-width: 993px) {
+  #landing-page h1 {
+    font-size: 2.25rem;
+  }
+
+  #landing-page h2 {
+    font-size: 1.35rem;
+  }
+
+  #landing-page p {
+    font-size: 0.875rem;
+  }
+
+  #lainding-page ul {
+    font-size: 0.875rem;
+  }
+
+  #landing-page li {
+    margin-bottom: 5px;
+  }
+
+  #landing-page button {
+    font-size: 1.5rem;
+    padding: 10px 20px;
+  }
+
   #message {
-    font-size: 26px;
+    font-size: 8vw;
   }
 
   #coordinates {
