--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,7 +73,7 @@ html {
 
 #upload-button {
   display: none;
-  margin-top: 10px;
+  margin-top: 5px;
   background-color: red;
   border-color: red;
 }
@@ -121,6 +121,12 @@ video {
   opacity: 0;
   pointer-events: none;
   z-index: 9999;
+}
+
+#gps-instructions {
+  display: none;
+  margin-top: 20px;
+  color: red;
 }
 
 #uploading-indicator {
