--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,11 +90,13 @@ html {
   text-align: center;
   position: fixed;
   bottom: 0;
+  color: red;
 }
 #distance {
   font-size: 16px;
   margin-top: 10px;
   text-align: center;
+  color: red;
 }
 #taipei-time {
   font-size: 16px;
